--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -964,28 +964,28 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="/#home">Home</a>
+            <a class="nav-link active" href="../../#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#tech">Technologies</a>
+            <a class="nav-link" href="../../#tech">Technologies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#services">Services</a>
+            <a class="nav-link" href="../../#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#how-it-works">How It Works</a>
+            <a class="nav-link" href="../../#how-it-works">How It Works</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#testimonials">Testimonials</a>
+            <a class="nav-link" href="../../#testimonials">Testimonials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/">Blog</a>
+            <a class="nav-link" href="../../blog/">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#faq">FAQ</a>
+            <a class="nav-link" href="../../#faq">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#contact">Contact</a>
+            <a class="nav-link" href="../../#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -1038,11 +1038,11 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <h5 class="fw-bold mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="/#services" class="text-light text-decoration-none">Services</a></li>
-            <li><a href="/#tech" class="text-light text-decoration-none">Technologies</a></li>
-            <li><a href="/#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
-            <li><a href="/#faq" class="text-light text-decoration-none">FAQ</a></li>
-            <li><a href="/#contact" class="text-light text-decoration-none">Contact</a></li>
+            <li><a href="../../#services" class="text-light text-decoration-none">Services</a></li>
+            <li><a href="../../#tech" class="text-light text-decoration-none">Technologies</a></li>
+            <li><a href="../../#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
+            <li><a href="../../#faq" class="text-light text-decoration-none">FAQ</a></li>
+            <li><a href="../../#contact" class="text-light text-decoration-none">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-4">
