--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -982,6 +982,12 @@
             <a class="nav-link" href="../../#testimonials">Testimonials</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/blog/">
+              Job Support by Technologies
+            </a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="../../blog/">Blog</a>
           </li>
           <li class="nav-item">
@@ -1093,6 +1099,8 @@
             <li><a href="../../#tech" class="text-light text-decoration-none">Technologies</a></li>
             <li><a href="../../#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
             <li><a href="../../#faq" class="text-light text-decoration-none">FAQ</a></li>
+            <li><a href="../../blog/" class="text-light text-decoration-none">Job Support by Technologies</a></li>
+            <li><a href="../../blog/" class="text-light text-decoration-none">Blog</a></li>
             <li><a href="../../#contact" class="text-light text-decoration-none">Contact</a></li>
           </ul>
         </div>
