--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -956,7 +956,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand fw-bold d-flex align-items-center" href="#" aria-label="Home">
+      <a class="navbar-brand fw-bold d-flex align-items-center" href="https://proxytechsupport.com/" aria-label="Home">
         <img src="../../images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
         <span>Job Support & Proxy</span>
       </a>
