--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,13 +17,13 @@
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:description" content="{{ page.description }}" />
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  <meta property="og:image" content="https://proxytechsupport.com/images/preview.png" />
+  <meta property="og:image" content="https://proxytechsupport.com/images/previewimg.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="{{ page.title }}" />
   <meta name="twitter:description" content="{{ page.description }}" />
-  <meta name="twitter:image" content="https://proxytechsupport.com/images/preview.png" />
+  <meta name="twitter:image" content="https://proxytechsupport.com/images/previewimg.png" />
 
   <!-- Favicon -->
   <link rel="icon" href="/images/favicon.png" type="image/png" />
