--- a/_layouts/interview-index.html
+++ b/_layouts/interview-index.html
@@ -321,7 +321,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="https://proxytechsupport.com/" aria-label="Home">
-        <img src="../../images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
+        <img src="/images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
         <span>Job Support & Proxy</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
