--- a/_layouts/interview-post.html
+++ b/_layouts/interview-post.html
@@ -606,9 +606,6 @@
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -633,7 +630,7 @@
           <!-- Intro Section -->
           <div class="interview-intro">
             <h5><i class="fas fa-lightbulb me-2"></i>About This Question</h5>
-            <p>{{ page.intro }}</p>
+            <p>{{ page.intro | default: page.description }}</p>
           </div>
 
           <!-- Content Area -->
@@ -665,7 +662,7 @@
               <div class="col-md-6 col-lg-4 mb-4">
                 <div class="related-post-card">
                   <h5>{{ post.title }}</h5>
-                  <p>{{ post.intro | truncate: 100 }}</p>
+                  <p>{{ post.description | default: post.intro | truncate: 100 }}</p>
                   <a href="{{ post.url }}">
                     Read More <i class="fas fa-arrow-right"></i>
                   </a>
